# TechTheTime-HighLevel

./: .gitignore  .gitmodules  ActionClient_8hpp.html  ActionClient_8hpp.js  ActionClient_8hpp_source.html  ActionService_8cpp.html  ActionService_8hpp.html  ActionService_8hpp_source.html  ClientT_8hpp.html  ClientT_8hpp_source.html  Dockerfile  Doxyfile  Example_8msg.html  Image_8srv.html  MotionFeedbackConst_8hpp.html  MotionFeedbackConst_8hpp.js  MotionFeedbackConst_8hpp_source.html  MotionPublisher_8cpp.html  MotionPublisher_8hpp.html  MotionPublisher_8hpp_source.html  MotionSubscriber_8cpp.html  MotionSubscriber_8hpp.html  MotionSubscriber_8hpp.js  MotionSubscriber_8hpp_source.html  Motion_8msg.html  Order_8srv.html  README.md  RobotMotion_8hpp.html  RobotMotion_8hpp.js  RobotMotion_8hpp_source.html  RobotStatus_8hpp.html  RobotStatus_8hpp.js  RobotStatus_8hpp_source.html  SerialPort_8cpp.html  SerialPort_8cpp.js  SerialPort_8hpp.html  SerialPort_8hpp.js  SerialPort_8hpp_source.html  TimeConst_8hpp.html  TimeConst_8hpp.js  (+344 more)
.github/workflows/: main.yml
build_tool/: build-hl.sh  clean.sh  delete-ros.sh  init-hl.sh  install-docker.sh  install-ros.sh  request_constructor_generator.py  run.sh
build_tool/config/: manager.yaml  microcontroller_proxy.yaml  motion_control.yaml
build_tool/script/: actuator.bot  homol  qualification.bot  script.bot  scriptMASTERYELLOW.bot  scriptSLAVE.bot  scriptSLAVEPURPLE.bot  scriptSLAVEYELLOW.bot  test.bot
build_tool/utils/: init-hl.sh  install-ros.sh
monitor/back/: app.py
monitor/front/: chart.js  index.css  index.html  robot.js
ros_workspace/: Doxyfile
ros_workspace/doc/html/: ActionService_8hpp.html  ActionService_8hpp_source.html  ClientT_8hpp.html  ClientT_8hpp_source.html  SerialPort_8cpp.html  SerialPort_8hpp.html  SerialPort_8hpp_source.html  actionClient_8hpp_source.html  annotated.html  classActionClient-members.html  classes.html  (+36 more)
ros_workspace/src/manager/: CMakeLists.txt  exec  package.xml  setup.cfg  setup.py
ros_workspace/src/manager/manager/ActionClient/: action_client.cpp
ros_workspace/src/manager/manager/controller/: joystick.py  test.py
ros_workspace/src/manager/manager/controller/exception/: JoystickNotFoundException.py
ros_workspace/src/manager/manager/controllerpp/: a.out  controllerSetup.cpp  controllerSetup.hpp  exec  myTest  myTest.cpp
ros_workspace/src/manager/src/: manager.cpp  script.bot
ros_workspace/src/manager/src/client/: ActionClient.cpp  ActionClient.hpp  ClientT.hpp  ManagerClient.hpp  actionClient.hpp  clientClass.hpp  managerClient.hpp  struct_wrapper.hpp
ros_workspace/src/manager/src/controller/: controllerSetup.cpp  controllerSetup.hpp
ros_workspace/src/manager/src/controller/test/: test.cpp
ros_workspace/src/manager/src/dev/: order_reader.cpp  order_reader.hpp
ros_workspace/src/manager/src/order/: Order.cpp  OrderClasse.cpp  OrderClasse.hpp  keyvalues.txt  order.cpp  order.hpp
ros_workspace/src/manager/src/robot_motion/: RobotMotion.hpp
ros_workspace/src/manager/src/robot_status/: RobotStatus.hpp
ros_workspace/src/manager/src/script/: keyvalues.txt  script.cpp  script.hpp
ros_workspace/src/manager/src/subscriber/: MotionSubscriber.cpp  MotionSubscriber.hpp  Subscriber.hpp  subscriberClass.hpp  testPublisher.hpp  testSubscriber.hpp
ros_workspace/src/manager/src/user_script/: script.bot
ros_workspace/src/microcontroller_proxy/: CMakeLists.txt  package.xml
ros_workspace/src/microcontroller_proxy/include/com/: SerialPort.hpp  bit_decoder.hpp
ros_workspace/src/microcontroller_proxy/include/ros/cli_serv/: ActionService.hpp
ros_workspace/src/microcontroller_proxy/include/ros/pub_sub/: AlertSubscriber.hpp  MotionPublisher.hpp
ros_workspace/src/microcontroller_proxy/include/sync/: alert_mutex.hpp  motion_mutex.hpp
ros_workspace/src/microcontroller_proxy/include/timer/: global_timer.h
ros_workspace/src/microcontroller_proxy/src/: config.yaml  config_docker.yaml  microcontroller_proxy.cpp
ros_workspace/src/microcontroller_proxy/src/alert/: AlertSubscriber.cpp  AlertSubscriber.hpp
ros_workspace/src/microcontroller_proxy/src/bit_decoder/: bit_decoder.hpp
ros_workspace/src/microcontroller_proxy/src/com/: SerialPort.cpp
ros_workspace/src/microcontroller_proxy/src/defines/: MotionFeedbackConst.hpp  TimeConst.hpp
ros_workspace/src/microcontroller_proxy/src/publisher/: MotionPublisher.cpp  MotionPublisher.hpp
ros_workspace/src/microcontroller_proxy/src/ros/cli_serv/: ActionService.cpp
ros_workspace/src/microcontroller_proxy/src/ros/pub_sub/: AlertSubscriber.cpp  MotionPublisher.cpp
ros_workspace/src/microcontroller_proxy/src/serial/: SerialPort.cpp  SerialPort.hpp
ros_workspace/src/microcontroller_proxy/src/service/: ActionService.cpp  ActionService.hpp
ros_workspace/src/microcontroller_proxy/src/sync/: alert_mutex.hpp  motion_mutex.hpp
ros_workspace/src/microcontroller_proxy/src/timer/: global_timer.cpp
ros_workspace/src/motion_control/: package.xml  setup.py
ros_workspace/src/motion_control/lidar/: LidarSubscriber.py
ros_workspace/src/motion_control/motion_control/: alert_publisher.py  const.py  motion_control.py  motion_subscriber.py  points_subscriber.py  sensor_data.py
ros_workspace/src/motion_control/motion_control/alert/: alert_publisher.py
ros_workspace/src/motion_control/motion_control/laser/: points_subcriber.py
ros_workspace/src/motion_control/motion_control/map/: map.py
ros_workspace/src/motion_control/motion_control/path_finding/: map.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+67 more)
utils_scripts/: build-hl.sh  colcon_build.sh  install_ros.sh  request_constructor_generator.py
(+168 files in other folders)
