<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manager</name>
  <version>0.0.0</version>
  <description>Manger is ROS2 Node that is responsible of taking decisions of the next action by requesting other nodes</description>
  <maintainer email="tsimafei.liashkevich@telecom-sudparis.eu">tsimafei</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
